Updatedw website, still contact needs to be fixed

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 <body>
     <div class="contact">
-        <a href="https://github.com/l0stinfr0st" class="btn">
+        <a href="https://github.com/l0stinfr0st" class="btn" target="_blank">
             <i class="fab fa-github"></i>
         </a>
-        <a href="https://www.linkedin.com/in/ahmadali-ghazi-145537263/" class="btn">
+        <a href="https://www.linkedin.com/in/ahmadali-ghazi-145537263/" class="btn" target="_blank">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a href="mailto:ahmadalimgahzi@gmail.com" class="btn">
+        <a href="mailto:ahmadalimgahzi@gmail.com" class="btn" target="_blank">
             <i class="fas fa-envelope"></i>
         </a>
     </div>
-    <a href=#home class="top"> <i class="fas fa-arrow-up"></i> </a>
+    <a href=#home class="top"> <i class="fas fa-arrow-up" target="_blank"></i> </a>
     <header class="fixed-header">
         <h1 class="name">
             <span class="black">AH</span><span class="red">MAD</span>
@@ -51,7 +51,8 @@
                         <span class="still"> I'm a </span> <span class="ani">Computer Engineer Student. <span
                                 class="cursor"></span><span class="delete"></span></span>
                     </p>
-                    <a href="pdfs/resume.pdf" download="Ahmad_Ghazi_Resume" class="resume-button">Resume</a>
+                    <a href="pdfs/resume.pdf" download="Ahmad_Ghazi_Resume" class="resume-button"
+                        target="_blank">Resume</a>
                 </div>
                 <div class=img>
                     <img src="images/me.png" alt="picture of me" class="profile-photo">
@@ -68,7 +69,7 @@
                 <div class="pop-in">
                     <div class="content">
                         <ul>
-                            <li>Hello! I’m Ahmad El Ghazi & passionate about technology and creating impactful
+                            <li>Hello! I’m Ahmad El Ghazi. I'm passionate about technology and creating impactful
                                 solutions. I
                                 have a solid background in Back-End Development, DSA and Databases from my university
                                 studies and I've personlly pursued Full-Stack Development.</li>
@@ -94,21 +95,159 @@
 
         </section>
         <section id="projects" class="full-screen-projects">
-            <h2>Projects</h2>
-            <p>Details about my projects.</p>
+            <h2 class="proj">My Creative <span class="red"> Portfolio </span> Section</h2>
+            <div class="projects">
+                <div class="vehicle">
+                    <div class="proj-img-box">
+                        <img src="images/vrs.png" class="proj-img">
+                    </div>
+                    <div class="proj-text">
+                        <div class="proj-title">Vehicle Rental/Purchase System</div>
+                        <div class="proj-desc">
+                            This project is a Vehicle Rental and Purchasing System that allows users to rent or purchase
+                            vehicles
+                            through an intuitive and user-friendly web interface.
+                            The platform also enables users to sell their own vehicles,
+                            making it a comprehensive solution for vehicle transactions.
+                        </div>
+                    </div>
+                    <div class="accessories">
+                        <a class="view"
+                            href="https://vehicle-rental-system.s3.me-south-1.amazonaws.com/Vehicle-Rental-System/index.html"
+                            target="_blank"><i class="fas fas fa-eye"></i></a>
+                        <a class="git-proj" href="https://github.com/l0stinfr0st/Vehicle-Rental-System-Full-Stack"
+                            target="_blank"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="portfolio">
+                    <div class="proj-img-box">
+                        <img src="images/protfolio.png" class="proj-img">
+                    </div>
+                    <div class="proj-text">
+                        <div class="proj-title">Portfolio</div>
+                        <div class="proj-desc">
+                            This is my personal portfolio website, showcasing my projects, skills,
+                            and experiences in the field of computer engineering. Designed as my first web project,
+                            this site reflects my journey in web development and serves as a platform for potential
+                            employers to view my work.
+                        </div>
+                    </div>
+                    <div class="accessories">
+                        <a class="view" href="https://ahmad-g.s3.amazonaws.com/my-portfolio/index.html#home"
+                            target="_blank"><i class="fas fas fa-eye"></i></a>
+                        <a class="git-proj" href="https://github.com/l0stinfr0st/my-portfolio" target="_blank"><i
+                                class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="dictionary">
+                    <div class="proj-img-box">
+                        <img src="images/dic.png" class="proj-img">
+                    </div>
+                    <div class="proj-text">
+                        <div class="proj-title">Dictionary</div>
+                        <div class="proj-desc">
+                            This is a dictionary that uses java file reading techniques to access a local dictionary
+                            and spell checks a user entered word by using hashmaps and hash functions for
+                            constant time searching using a linear probing technique designed and implemented by me.
+                        </div>
+                    </div>
+                    <div class="accessories">
+                        <a class="view"><i class="fas fas fa-eye"></i></a>
+                        <a class="git-proj" href="https://github.com/l0stinfr0st/Dictionary-Project" target="_blank"><i
+                                class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section id="skills" class="full-screen-skills">
-            <h2>Skills</h2>
-            <p>Information about my skills.</p>
+        <section id="skill" class="full-screen-skills">
+            <h2 class="skill-header">My <span class="red">Technical</span> Skills</h2>
+            <div class="skills">
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" />
+                    <span>Python</span>
+                </div>
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" />
+                    <span>Java</span>
+                </div>
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" />
+                    <span>HTML</span>
+                </div>
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" />
+                    <span>CSS</span>
+                </div>
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+                    <span>JavaScript</span>
+                </div>
+                <div class="skill">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" />
+                    <span>Node.js</span>
+                </div>
+                <div class="skill">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" />
+                    <span>AWS</span>
+                </div>
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" />
+                    <span>MySQL</span>
+                </div>
+                <div class="skill">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" />
+                    <span>PHP</span>
+                </div>
+                <div class="skill">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Watchguard_logo.svg" />
+                    <span>WatchGuard</span>
+                </div>
+                <div class="skill">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Meraki_Logo_2016_transparent.svg" />
+                    <span>Cisco Meraki</span>
+                </div>
+            </div>
         </section>
         <section id="contact" class="full-screen-contact">
-            <h2>Contact</h2>
-            <p>How to contact me.</p>
+            <h2 class="contact-header">Where to <span class="red">Contact</span> Me</h2>
+            <div class="contact-info">
+                <div class="contact-img">
+                    <img src="images/contact.png">
+                </div>
+                <div class="contact-inputs">
+                    <div class="contact-social">
+                        <a target="_blank" href="https://www.linkedin.com/in/ahmadali-ghazi-145537263/"
+                            style="background-color: rgb(97, 168, 226); color: white; border-radius: 5px; border:none;"><i
+                                class="fab fa-linkedin" style="color: white;"></i> Linked-In</a>
+                        <a target="_blank" href="https://github.com/l0stinfr0st"
+                            style="background-color: rgb(56, 54, 54); color: white; border-radius: 5px; border:none;"><i
+                                class="fab fa-github" style="color: white;"></i> Github</a>
+                        <a target="_blank" href="mailto:ahmadalimgahzi@gmail.com"
+                            style="background-color: #dc143c; color: white; border-radius: 5px; border:none;"><i
+                                class="fas fa-envelope" style="color: white;"></i> Gmail</a>
+                    </div>
+                </div>
+                <div class="contact-msg">
+                    <textarea class="name" placeholder="Full Name"
+                        style="width: 350px; height: 40px; border-radius: 10px; border: none; vertical-align: top; padding: 10px; resize: none;"></textarea>
+                    <textarea class="email" placeholder="Email"
+                        style="width: 350px; height: 40px; border-radius: 10px; border: none; vertical-align: top; padding: 10px; resize: none;"></textarea>
+                    <textarea class="number" placeholder="Number"
+                        style="width: 350px; height: 40px; border-radius: 10px; border: none; vertical-align: top; padding: 10px; resize: none;"></textarea>
+                    <textarea class="message" placeholder="Your message"
+                        style="width: 350px; height: 150px; border-radius: 10px; border: none; vertical-align: top; padding: 10px; resize: none;"></textarea>
+                    <button
+                        style="cursor:pointer; width: 350px; height: 40px; border-radius: 10px; border: none; background-color: #dc143c; color:rgb(255, 255, 255); font-weight: 600;"
+                        id="send-btn">Send
+                        youe message</button>
+                </div>
+            </div>
         </section>
         <script src="script.js"></script>
+        <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; Ahmad Ali El Ghazi 2024</p>
     </footer>
 </body>
 
